@@ -133,7 +133,6 @@ public class GoogleCloudStorageFileSystemIntegrationTest {
   // Name of the test object.
   protected static String objectName = "gcsio-test.txt";
 
-  protected static final boolean GCS_FILE_SIZE_LIMIT_250GB_DEFAULT = true;
   protected static final int UPLOAD_CHUNK_SIZE_DEFAULT = 64 * 1024 * 1024;
 
   @ClassRule
@@ -160,7 +159,6 @@ public class GoogleCloudStorageFileSystemIntegrationTest {
                 .setProjectId(projectId)
                 .setWriteChannelOptions(
                     AsyncWriteChannelOptions.newBuilder()
-                        .setFileSizeLimitedTo250Gb(GCS_FILE_SIZE_LIMIT_250GB_DEFAULT)
                         .setUploadChunkSize(UPLOAD_CHUNK_SIZE_DEFAULT)
                         .build());
 
