@@ -15,6 +15,7 @@
   6. Add support for Hadoop Delegation Tokens (based on HADOOP-14556).
      Configurable via `fs.gs.delegation.token.binding` property.
 
+  7. Remove deprecated `fs.gs.file.size.limit.250gb` property.
 
 1.9.14 - 2019-02-13
 
